--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,11 +3,13 @@ project:
   output-dir: docs
 
 website:
-  title: "Dr. Liyin He"
+  title: "EcoSense Lab"
   navbar:
     left:
       - href: index.qmd
         text: Home
+      - href: people.qmd
+        text: People
       - href: Research.qmd
         text: Research
       - href: Publications.qmd
